--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Benjamín Vicente <benjavicente@uc.cl>"]
 readme = "readme.md"
-packages = [{include = "edd_cli"}]
+packages = [{ include = "edd_cli" }]
 
 [tool.poetry.scripts]
 edd = "edd_cli.cli:app"
@@ -14,8 +14,13 @@ python = "^3.11"
 fastapi = "^0.109.2"
 pydantic = "^2.6.1"
 docker = "^7.0.0"
-typer = {extras = ["all"], version = "^0.9.0"}
+typer = { extras = ["all"], version = "^0.9.0" }
 uvicorn = "^0.27.1"
+pydantic-settings = "^2.2.0"
+
+[tool.pyright]
+venvPath = "."
+venv = ".venv"
 
 
 [build-system]
