--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -9,6 +9,7 @@ RUN export LD_LIBRARY_PATH=/usr/include/gtk-3.0/
 RUN apt install -y python3
 RUN apt install -y time htop
 
+RUN groupadd -r runner && adduser runner
 USER runner
 WORKDIR /runner
 RUN chown -R runner /runner
