--- a/deploy/Dockerfile
+++ b/deploy/Dockerfile
@@ -9,8 +9,11 @@ RUN export LD_LIBRARY_PATH=/usr/include/gtk-3.0/
 RUN apt install -y python3
 RUN apt install -y time htop
 
-RUN groupadd --gid 10000 -r runner
-RUN adduser runner --disabled-password --uid 10000 --gid 10000
+# Id de usuairo y grupo correspondiente al host
+ARG gid=1000
+ARG uid=1000
+RUN groupadd --gid {gid} runner
+RUN adduser runner --disabled-password --uid {uid} --gid {gid}
 
 WORKDIR /home/runner
 RUN chown -R runner /home/runner
